--- a/kinda-good-protocol/KindaGoodProtocol.ui
+++ b/kinda-good-protocol/KindaGoodProtocol.ui
@@ -64,6 +64,19 @@
      </item>
     </layout>
    </widget>
+   <widget class="QPushButton" name="buttonSend">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Send</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
