--- a/kinda-good-protocol/KindaGoodProtocol.ui
+++ b/kinda-good-protocol/KindaGoodProtocol.ui
@@ -33,21 +33,21 @@
         <enum>QLayout::SetMaximumSize</enum>
        </property>
        <item row="0" column="0">
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="packetDelayLabel">
          <property name="text">
           <string>Packet Delay</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
-        <widget class="QLabel" name="packetDelayLabel">
+        <widget class="QLabel" name="bitErrorRateLabel">
          <property name="text">
-          <string>TextLabel</string>
+          <string>Bit Error Rate</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QSlider" name="horizontalSlider_2">
+        <widget class="QSlider" name="bitErrorRateSlider">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -84,7 +84,7 @@
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>21</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
