--- a/kinda-good-protocol/KindaGoodProtocol.ui
+++ b/kinda-good-protocol/KindaGoodProtocol.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
+    <width>618</width>
     <height>400</height>
    </rect>
   </property>
@@ -14,76 +14,74 @@
    <string>KindaGoodProtocol</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QGroupBox" name="groupBox">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>60</y>
-      <width>301</width>
-      <height>241</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Simulator Parameters</string>
-    </property>
-    <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="0">
-      <layout class="QGridLayout" name="gridLayout">
-       <property name="sizeConstraint">
-        <enum>QLayout::SetMaximumSize</enum>
-       </property>
-       <item row="0" column="0">
-        <widget class="QLabel" name="packetDelayLabel">
-         <property name="text">
-          <string>Packet Delay</string>
-         </property>
-        </widget>
-       </item>
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>File sending</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
        <item row="1" column="0">
-        <widget class="QLabel" name="bitErrorRateLabel">
+        <widget class="QLabel" name="addressLabel">
          <property name="text">
-          <string>Bit Error Rate</string>
+          <string>IPv4 Address</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QSlider" name="bitErrorRateSlider">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
+        <widget class="QLineEdit" name="addressLineEdit"/>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="selectedFileLineEdit"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="selectedFileLabel">
+         <property name="text">
+          <string>File being sent</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QSlider" name="packetDelaySlider">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
+       <item row="3" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QPushButton" name="buttonSend">
+           <property name="text">
+            <string>Send</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="2" column="2">
+        <widget class="QPushButton" name="selectFileButton">
+         <property name="text">
+          <string>Select File</string>
          </property>
         </widget>
        </item>
       </layout>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QPushButton" name="buttonSend">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Send</string>
-    </property>
-   </widget>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="logBox">
+      <property name="title">
+       <string>Logging</string>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QTextBrowser" name="logBrowser"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>618</width>
      <height>18</height>
     </rect>
    </property>
